# alphadataforge

./: .env.example  .gitignore  README.md  REPORT.md  compare_script.py  compare_script_detailed.py  comparison_examples.py  play.py  pyproject.toml
.github/workflows/: tests.yml
src/alphadataforge/: __init__.py
src/alphadataforge/config/: endpoints.py  settings.py
src/alphadataforge/core/: base_fetcher.py  exceptions.py
src/alphadataforge/data/: fundamental.py  price.py
src/alphadataforge/data_fetch/: tiingo_fetcher.py  yfinance_fetcher.py
src/alphadataforge/providers/: alphavantage_fetcher.py  fmp_fetcher.py  hybrid_fetcher.py  tiingo_fetcher.py  yfinance_fetcher.py
src/alphadataforge/utils/: finance_math.py  logger.py
tests/: conftest.py  test_alphavantage.py  test_fetchers.py  test_finance_math.py  test_fmp.py  test_robustness.py  test_tiingo.py
tests/cassettes/: test_alphavantage_fetch_financials_vcr.yaml  test_alphavantage_fetch_info_vcr.yaml  test_alphavantage_fetch_single_vcr.yaml  test_fmp_fetcher_single_adjusted.yaml  test_fmp_fetcher_single_unadjusted.yaml
