[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphadataforge"
version = "0.1.0"
description = "A modular data fetching and feature engineering pipeline for quantitative trading."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "tiingo",
    "google-cloud-bigquery",
    "requests",
    "tenacity",
    "scikit-learn",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/RETCx/alphadataforge"

